fix: add z-index property to the burger menu

--- a/english-for-kids-base/src/render/burger-menu/burger-menu.css
+++ b/english-for-kids-base/src/render/burger-menu/burger-menu.css
@@ -4,6 +4,7 @@
   height: 100%;
   overflow: hidden;
   transition: all .5s;
+  z-index: 10;
 }
 
 .burger-menu_hidden {
